--- a/index.html
+++ b/index.html
@@ -1,30 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-<meta charset="utf-8" />
-<meta http-equiv="x-ua-compatible" content="ie=edge" />
-<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
-<title>Untitled</title>
-
-<!--[if (gt IE 8) | (IEMobile)]><!-->
-<link rel="stylesheet" href="./css/styles.css" />
-<!--<![endif]-->
-
-<!--[if (lt IE 9) & (!IEMobile)]>
+	<head>
+		<script src="https://cdn.firebase.com/js/client/2.2.7/firebase.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+		<meta charset="utf-8" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
+		<title>Untitled</title>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+		<!--[if (gt IE 8) | (IEMobile)]>
+			<!-->
+			<link rel="stylesheet" href="./css/styles.css" />
+		<!--<![endif]-->
+		<!--[if (lt IE 9) & (!IEMobile)]>
 <link rel="stylesheet" href="./stylesheets/application-ie.css" />
 <![endif]-->
+	</head>
+	<body>
+		<div class="container">
+			<h1>Top Stories</h1>
+			<div id="topStories"></div>
+			<h1>New Stories</h1>
+			<div id="newStories"></div>
+			<h1>Ask Stories</h1>
+			<div id="askStories"></div>
+			<h1>Show Stories</h1>
+			<div id="showStories"></div>
+			<h1>Job Stories</h1>
+			<div id="jobStories"></div>
+			<h1>Max Item</h1>
+			<div id="maxItem"></div>
+			<h1>Max Item Article</h1>
+			<div id="item"></div>
+			<script src="./js/app.js"></script>
+		</div>
+	</body>
 
-</head>
-<body>
-Top Stories<div id="topStories"></div>
-New Stories<div id="newStories"></div>
-Ask Stories<div id="askStories"></div>
-Show Stories<div id="showStories"></div>
-Job Stories<div id="jobStories"></div>
-Max Item<div id="maxItem"></div>
-Max Item Article<div id="9952138"></div>
-<script src="./js/app.js"></script>
-</body>
 </html>
